<resources>
    <string name="app_name">Sound Machine</string>
    <string name="button_white_noise">White Noise</string>
    <string name="button_rain">Rain</string>
    <string name="button_rain_thunder">Rain Thunder</string>
    <string name="button_ocean">Ocean</string>
    <string name="button_brook">Brook</string>
    <string name="button_start_timer">Start Timer</string>
    <string name="timer_hours_label">Hours</string>
    <string name="timer_minutes_label">Minutes</string>
    <string name="content_description_pause">Pause button</string>
</resources>
